@@ -13,3 +13,9 @@ Matching logic for non-rat genes (to determine if an incoming gene matches a gen
     2. if not found, match by HGNC/MGI id -- only for human/mouse genes
     3. if not found, match by Ensembl Gene Id
     
+## Nomenclature changes for non-rat genes.
+    
+    1. If the gene nomenclature source authority is 'NCBI', if there are any changes to gene name or symbol,
+    then gene name and/or symbol are updated and nomenclature event is generated
+    2. If the gene nomenclature source authority is not 'NCBI', then any changes
+    to gene name and/or symbol are suppressed       
